# texer

./: .gitignore  CLAUDE.md  DOCS_SETUP.md  MARKER_SIZE_FEATURE.md  Makefile  NUMPY_MARKER_SIZE_TEST_RESULTS.md  README.md  mkdocs.yml  pyproject.toml  test_numpy_marker_size.py
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/workflows/: docs.yml  publish.yml
docs/: index.md
docs/api/: plots.md  specs.md  tables.md  utils.md
docs/compilation/: pdf.md  saving.md
docs/getting-started/: core-concepts.md  installation.md  mental-model.md
docs/plots/: 3d-surface.md  advanced.md  bar-charts.md  basic.md  data-driven.md  groupplots.md  marker-size.md  multiple-series.md
docs/specs/: cond.md  format.md  iter.md  overview.md  raw.md  ref.md
docs/tables/: advanced.md  basic.md  data-driven.md  formatting.md
examples/: README_format_number.md  demo.py  format_number_demo.py  marker_size_demo.py  save_and_compile.py
scripts/: .gitignore  generate_doc_images.py
src/texer/: __init__.py  eval.py  pgfplots.py  specs.py  tables.py  utils.py
tests/: __init__.py  test_compilation.py  test_eval.py  test_pgfplots.py  test_specs.py  test_tables.py
