[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "texer"
version = "0.5.11"
description = "Generate LaTeX tables and figures with glom-style specs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Thibaut Lamadon", email = "thibaut.lamadon@example.com"},
]
keywords = ["latex", "tables", "pgfplots", "tikz", "typesetting", "scientific"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: LaTeX",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "glom>=23.0.0",
]

[project.urls]
# TODO: Add your repository URL
# Homepage = "https://github.com/yourusername/texer"
# Repository = "https://github.com/yourusername/texer"
# Documentation = "https://github.com/yourusername/texer#readme"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "numpy>=1.20.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
strict = true
